--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "stack",
   "version": "1.0.0",
   "description": "Stack project",
-  "main": "index.js",
+  "main": "src/main/main.js",
   "scripts": {
-    "test": "echo \"No tests specified\" && exit 0",
-    "build": "echo \"No build specified\" && exit 0"
+    "test": "jest",
+    "build": "echo \"No build specified\" && exit 0",
+    "start": "electron .",
+    "clean": "rimraf coverage/ .nyc_output/ dist/ build/ out/",
+    "lint": "echo \"No linting configured\" && exit 0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "electron": "^35.1.3",
+    "jest": "^29.7.0",
+    "rimraf": "^5.0.5"
   }
-} 
+}
